--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "^13.4.19",
-    "axios": "^1.4.0",
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.16.2",
-    "react-icons": "^4.10.1",
+    "axios": "^1.4.0",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0"
+    "framer-motion": "^10.16.2",
+    "next": "^13.4.19",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "eslint": "8.47.0",
