--- a/package.json
+++ b/package.json
@@ -8,28 +8,34 @@
     "dev": "nodemon backend/server.js",
     "test": "jest"
   },
-  "keywords": ["machine-learning", "ai", "training", "platform"],
+  "keywords": [
+    "machine-learning",
+    "ai",
+    "training",
+    "platform"
+  ],
   "author": "Epoch-ml Development Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
     "@tensorflow/tfjs": "^4.15.0",
     "@tensorflow/tfjs-node": "^4.15.0",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
-    "xss-clean": "^0.1.1",
-    "express-validator": "^7.0.0"
+    "express-rate-limit": "^6.10.0",
+    "express-validator": "^7.0.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.3",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
 }
